Fix build issue

--- a/_config.yml
+++ b/_config.yml
@@ -95,6 +95,7 @@ defaults:
       # can be overridden in the front matter for a specific post
       hidden: false
 
+repository: Khanalpooja/khanalpooja.github.io
 plugins:
   - jekyll-seo-tag
   - jekyll-gist
