--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 title: Pooja Khanal
-bio:  Software engineer by trade, traveler by passion. Join me as I debug code and explore new destinations, juggling bugs and backpacks and beyond on my global adventures.
+bio:  Bug finder and Backpacker 
 
 # twitter summary info
 description: A blog about travel and technology
@@ -44,7 +44,7 @@ email: khanalpooja425@gmail.com
 authors:
   pooja:
     name: Pooja Khanal
-    bio: Software engineer by trade, traveler by passion. Join me as I debug code and explore new destinations, juggling bugs and backpacks and beyond on my global adventures.
+    bio:  Bug finder and Backpacker 
     external-image: false
     picture: assets/images/profile.jpg
     # twitter: poojakhanal
