--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ picture: assets/images/profile.jpg
 
 # your site color theme, true for dark theme, 
 # false to light theme, auto to switch with system.
-dark-theme: auto
+dark-theme: false
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
@@ -20,7 +20,7 @@ resume: false
 resume-external: true
 resume-url: https://google.com/?q=my+resume
 
-url: https://khanalpooja.github.io/
+url: https://poojakhanal.com.np
 # your url: https://USERNAME.github.io
 
 permalink: /:title/
